Works on utils methods localization